# system-graph

./: CMakeLists.txt  LICENSE  README.md  graphs.hpp  id_graph.hpp  sketch.cpp  system_manager.hpp  systems-config.cmake.in
examples/: CMakeLists.txt  sketch.cpp
examples/ordered-systems/: CMakeLists.txt  sketch.cpp
examples/sdl-systems/: CMakeLists.txt
examples/sdl-systems/include/: fibonacci_spiral.hpp
examples/sdl-systems/include/pi/systems/: init_system.hpp  renderer_system.hpp  sdl_deleter.hpp  window_system.hpp
examples/sdl-systems/src/: sketch.cpp
include/pi/: systems.hpp
include/pi/graphs/: digraph.hpp
include/pi/systems/: system_graph.hpp  system_locator.hpp
